--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -1,5 +1,6 @@
 // import the CSS framework
-// Do not use *= require in Sass or your other stylesheets will not be able to access the Bootstrap mixins and variables.
+// Do not use *= require in Sass or your other stylesheets will not be able to
+// access the Bootstrap mixins and variables.
 @import "bootstrap";
 
 // make all images responsive by default
@@ -7,10 +8,11 @@ img {
   @extend .img-fluid;
   margin: 0 auto;
 }
+
 // override for the 'Home' navigation link
 .navbar-brand {
   font-size: inherit;
-  }
+}
 
 // THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
@@ -19,13 +21,16 @@ img {
   @extend .col-md-6;
   text-align: center;
 }
+
 .form {
   @extend .col-md-6;
 }
+
 .form-centered {
   @extend .col-md-6;
   text-align: center;
 }
+
 .submit {
   @extend .btn;
   @extend .btn-primary;
